Context: add xdg-shell-client-protocol.h to xdg-shell.c

This is to avoid link error.
https://gitlab.freedesktop.org/wayland/wayland/-/issues/90